Fix annotation popup z-index bug.

--- a/app/less/classes/transition-popup.less
+++ b/app/less/classes/transition-popup.less
@@ -27,7 +27,7 @@
         }
     }
 
-    &.audio, &.score, &.wiki {
+    &.annotation, &.audio, &.score, &.wiki {
         z-index: @popup-content-z-index;
     }
 
